Addressing minor sonarqube issue